--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>D3 Page Template</title>
-        <script type="text/javascript" src="../d3/d3.js"></script>
+        <script src="https://d3js.org/d3.v4.js"></script>
         <style>
             .axis path
             .axis line {
